--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+ChangeLog
+
+1.2.11
+	Added InstallChecker
+	Updated AssemblyVersion.tt
+	Moved AssemblyVersion.tt to root of project
+	Updated pre-build steps
+	Updated for KSP 1.8
+
 1.2.10.3
 	Fixed nullref spam after setting node in map view
 
